<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFIles.Registration_Activity"
        android:background="@drawable/login_background"
           android:focusable="true"
           android:focusableInTouchMode="true">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

   <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                      android:layout_height="wrap_content">
       <EditText
               android:layout_height="50dp"
               android:inputType="textPersonName|textCapSentences"
               android:ems="10"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:id="@+id/username_view"
               android:drawablePadding="10dp"
               android:hint="@string/username" android:background="@drawable/login_edit_bg"
               android:layout_width="0dp" android:layout_marginEnd="32dp"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
               app:layout_constraintStart_toStartOf="parent"
               android:drawableStart="@drawable/ic_user"
               android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
       <EditText
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:drawablePadding="10dp"

               android:layout_height="50dp"
               android:inputType="textPassword"
               android:ems="10"
               android:id="@+id/password_view"
               android:background="@drawable/login_edit_bg"
               android:hint="@string/password"
               app:layout_constraintStart_toStartOf="@+id/email_view"
               android:drawableStart="@drawable/ic_password"
               app:layout_constraintEnd_toEndOf="@+id/email_view" android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@+id/email_view" app:layout_constraintHorizontal_bias="0.0"
               android:layout_width="0dp"/>
       <Button
               android:text="@string/register"
               android:textSize="18sp"
               android:textColor="@color/primaryTextColor"
               android:layout_height="50dp"
               android:id="@+id/register_button" android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@+id/password_view"
               app:layout_constraintEnd_toEndOf="@+id/password_view"
               app:layout_constraintStart_toStartOf="@+id/password_view"
               android:background="@drawable/register_button"
               android:layout_width="0dp"/>
       <TextView
               android:text="@string/already_have_an_account"
               android:textColor="#98FB98"
               android:gravity="center"
               android:textStyle="bold"
               android:textSize="18sp"
               android:layout_width="0dp"
               android:layout_height="50dp"
               android:id="@+id/already_accnt" android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@+id/register_button"
               app:layout_constraintEnd_toEndOf="@+id/register_button"
               app:layout_constraintStart_toStartOf="@+id/register_button"/>
       <EditText
               android:layout_height="50dp"
               android:drawableStart="@drawable/ic_email"
               android:inputType="textEmailAddress"
               android:ems="10"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:id="@+id/email_view"
               android:background="@drawable/login_edit_bg"
               android:hint="@string/email"
               app:layout_constraintEnd_toEndOf="@+id/user_rollno_view"
               app:layout_constraintStart_toStartOf="@+id/user_rollno_view" app:layout_constraintHorizontal_bias="0.41"
               app:layout_constraintTop_toBottomOf="@+id/user_rollno_view"
               android:drawablePadding="10dp"
               android:layout_width="0dp" android:layout_marginTop="10dp"/>
       <EditText
               android:layout_width="0dp"
               android:layout_height="48dp"
               android:inputType="textPersonName"
               android:paddingRight="10dp"
               android:paddingLeft="10dp"
               android:drawableStart="@drawable/ic_roll"
               android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-"
               android:ems="10"
               android:id="@+id/user_rollno_view" android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@+id/username_view"
               app:layout_constraintStart_toStartOf="@+id/username_view"
               app:layout_constraintEnd_toEndOf="@+id/username_view" android:hint="@string/rollno_eg_80_bct_b"
               android:drawablePadding="10dp"
               android:background="@drawable/login_edit_bg"/>
       <ImageView
               android:layout_width="150dp"

               android:layout_height="150dp" app:srcCompat="@drawable/logo"
               android:id="@+id/imageView2" android:layout_marginTop="40dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               android:contentDescription="@string/todo"/>

   </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>