<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdmiinChanges.AdminActivity" android:id="@+id/constraintLayout"
        android:background="@color/material_bg"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:focusable="true"
                                                       android:focusableInTouchMode="true"
                                                       android:id="@+id/constraintLayout2">


        <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                  app:cardElevation="5dp"
                android:layout_width="0dp"
                android:layout_height="229dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:cardBackgroundColor="@color/colorPrimaryLight" android:id="@+id/cardView">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@android:color/transparent"
            >

                <Button
                        android:text="@string/postnotice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:id="@+id/post_notice_button"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/primaryTextColor"
                        android:background="@drawable/post_button"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="44dp"

                        android:inputType="textCapSentences"
                        android:ems="10"
                        android:id="@+id/title_notice" android:layout_marginStart="20dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                        android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"
                        android:hint="@string/title"
                        android:autofillHints=""/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:inputType="textMultiLine|textCapSentences"
                        android:ems="10"
                        android:id="@+id/body_notice"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="20dp" android:layout_marginTop="5dp"
                        app:layout_constraintHorizontal_bias="1.0"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toTopOf="@+id/post_notice_button"
                        android:hint="@string/notice" app:layout_constraintVertical_bias="1.0"
                        app:layout_constraintTop_toBottomOf="@+id/title_notice"
                        android:autofillHints=""/>
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="0dp" app:srcCompat="@android:drawable/ic_menu_upload_you_tube"
                        android:id="@+id/upload_notice_image"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/body_notice"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                        android:text="Select\nPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/primaryTextColor"
                        android:id="@+id/upload_notice_picture"
                        app:layout_constraintBottom_toBottomOf="@+id/upload_notice_image"
                        app:layout_constraintStart_toEndOf="@+id/upload_notice_image"
                        android:layout_marginStart="10dp" app:layout_constraintTop_toTopOf="@+id/upload_notice_image"
                        android:layout_marginBottom="8dp" android:layout_marginTop="8dp"/>
                <CheckBox
                        android:onClick="onCheckboxClicked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_a" app:layout_constraintStart_toEndOf="@+id/upload_notice_picture"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="@+id/upload_notice_picture"
                />
                <CheckBox
                        android:onClick="onCheckboxClicked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_b"
                        app:layout_constraintTop_toTopOf="@+id/checkBox_a"
                        app:layout_constraintStart_toEndOf="@+id/checkBox_a" android:layout_marginStart="8dp"/>
                <CheckBox
                        android:onClick="onCheckboxClicked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_c"
                        app:layout_constraintStart_toEndOf="@+id/checkBox_b"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="@+id/checkBox_b"
                        app:layout_constraintBottom_toBottomOf="@+id/checkBox_b"/>
                <TextView
                        android:text="A"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox_a"
                        app:layout_constraintStart_toStartOf="@+id/checkBox_a"
                        app:layout_constraintEnd_toEndOf="@+id/checkBox_a"
                        app:layout_constraintBottom_toBottomOf="@+id/upload_notice_picture"/>
                <TextView
                        android:text="B"
                        android:textColor="@color/primaryTextColor"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/checkBox_b"
                        app:layout_constraintEnd_toEndOf="@+id/checkBox_b"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox_b"
                        app:layout_constraintBottom_toBottomOf="@+id/upload_notice_picture"/>
                <TextView
                        android:text="C"
                        android:textColor="@color/primaryTextColor"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        app:layout_constraintStart_toStartOf="@+id/checkBox_c"
                        app:layout_constraintEnd_toEndOf="@+id/checkBox_c"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox_c"
                        app:layout_constraintBottom_toBottomOf="@+id/upload_notice_picture"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="220dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                android:id="@+id/cardview_assignment_publish_admin" app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
            >
                <TextView
                        android:text="A"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:id="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox_assign_a"
                        app:layout_constraintEnd_toEndOf="@+id/checkBox_assign_a"
                        app:layout_constraintStart_toStartOf="@+id/checkBox_assign_a" android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                        android:text="B"
                        android:textColor="@color/primaryTextColor"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        app:layout_constraintStart_toStartOf="@+id/checkBox_assign_b"
                        app:layout_constraintEnd_toEndOf="@+id/checkBox_assign_b"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox_assign_b" android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                        android:text="C"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView95"
                        app:layout_constraintStart_toStartOf="@+id/checkBox_assign_c"
                        app:layout_constraintEnd_toEndOf="@+id/checkBox_assign_c"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox_assign_c" android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <CheckBox
                        android:onClick="onCheckboxClicked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_assign_a"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="25dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="@+id/post_assignment_button"
                        android:layout_marginStart="20dp"/>
                <CheckBox
                        android:onClick="onCheckboxClicked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_assign_b"
                        app:layout_constraintTop_toTopOf="@+id/checkBox_assign_a"
                        app:layout_constraintBottom_toBottomOf="@+id/checkBox_assign_a"
                        app:layout_constraintStart_toEndOf="@+id/checkBox_assign_a" android:layout_marginStart="8dp"
                />
                <CheckBox
                        android:onClick="onCheckboxClicked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_assign_c"
                        app:layout_constraintTop_toTopOf="@+id/checkBox_assign_b"
                        app:layout_constraintBottom_toBottomOf="@+id/checkBox_assign_b"
                        app:layout_constraintStart_toEndOf="@+id/checkBox_assign_b" android:layout_marginStart="8dp"
                />
                <Button
                        android:text="@string/postassignment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:id="@+id/post_assignment_button"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/primaryTextColor"
                        android:background="@drawable/post_button"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                />
                <EditText
                        android:layout_width="167dp"
                        android:layout_height="44dp"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/assignment_date_tv" android:layout_marginStart="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:hint="Date Of Submission"
                        android:autofillHints="" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/assignment_details_tv"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:inputType="textMultiLine|textPersonName|textCapSentences"
                        android:ems="10"
                        android:id="@+id/assignment_details_tv" android:layout_marginStart="20dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginTop="8dp"
                        android:hint="Assignment Details"
                        android:autofillHints="" app:layout_constraintTop_toBottomOf="@+id/assignment_subject_tv"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:inputType="textPersonName|textCapSentences"
                        android:ems="10"
                        android:id="@+id/assignment_subject_tv" android:layout_marginStart="20dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                        android:layout_marginTop="15dp" app:layout_constraintTop_toTopOf="parent"
                        android:hint="Subject"
                        android:autofillHints=""/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
